--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4",
     "yesno-dialog": "^0.2.1"
   },
